# api/internal/routers/report.go
@@ -24,6 +24,7 @@ func BuildReportRouter() *chi.Mux {
 	reportRouter.Post("/{reportId}/export/csv", handlers.ExportReportCsv)
 	reportRouter.Post("/{reportId}/export/pack", handlers.ExportReportReceiptPack)
 	reportRouter.Post("/{reportId}/export/xlsx", handlers.ExportReportXlsx)
+	reportRouter.Post("/{reportId}/export/custom", handlers.ExportReportCustom)
 
 	return reportRouter
 }
